# rest2smtp

./: CMakeLists.txt  README.md  rest2smtp.conf.in
resources/spec/: rest2smtp.spec
resources/test/: mock_smtp.expect  test.json  test_sendemail.sh
src/: api_server.c  api_server.h  config.h.in  main.c  queue.c  queue.h  smtp_client.c  smtp_client.h  sw_config.c  sw_config.h
